fix spacing between privacy and download sections

--- a/product-landing-pages/on-call/style.css
+++ b/product-landing-pages/on-call/style.css
@@ -258,6 +258,7 @@ header {
 /* section privacy info */
 .section-privacy {
   background: linear-gradient(#ece9e6, #fff);
+  margin-bottom: 2em;
 }
 .container-cards-data {
   margin: 0 auto;
